# OrchidChallenge

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: llm_cloner.py  pyproject.toml  scraper.py  scraper.py.backup
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
