[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.52.2",
    "beautifulsoup4>=4.13.4",
    "browserbase>=1.4.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[tool.uv.workspace]
members = [
    "app",
]
